# BSM4tops-GNN-ntuples

./: .gitignore  README.md  full_compile.sh  setup.sh
EventSelection/: .WriteConfig.py.swp  DiLeptonJet_MC_a_Test.txt  DiLeptonJet_MC_d_Test.txt  DiLeptonJet_MC_e_Test.txt  DileptonLeptonJet_MC_e.txt  Dilepton_MC_a.txt  Dilepton_MC_d.txt  Dilepton_MC_e.txt  Object.py  SingleLeptonJet_MC_a.txt  SingleLeptonJet_MC_d.txt  (+2 more)
source/FourTopsGNNSampleProduction/: CMakeLists.txt
source/FourTopsGNNSampleProduction/FourTopsGNNSampleProduction/: EventSaver.h  EventSaverLoader.h  HelperFunctions.h  ParticleID.h  TruthAnalysis.h
source/FourTopsGNNSampleProduction/ROOT/: EventSaver.cxx  EventSaverLoader.cxx  HelperFunctions.cxx  LinkDef.h  ParticleID.cxx
source/FourTopsGNNSampleProduction/Root/: EventSaver.cxx  LinkDef.h  ParticleID.cxx  TruthAnalysis.cxx
source/FourTopsGNNSampleProduction/share/: XSection-MC16-13TeV.data
source/FourTopsGNNSampleProduction/share/PRW/user.pgadow.Top.PRW.MC16a.FS.special_sherpa2210/: prw.merged.root
source/FourTopsGNNSampleProduction/share/PRW/user.pgadow.Top.PRW.MC16a.FS.special_signals/: prw.merged.root
source/FourTopsGNNSampleProduction/share/PRW/user.pgadow.Top.PRW.MC16d.FS.special_sherpa2210/: prw.merged.root
source/FourTopsGNNSampleProduction/share/PRW/user.pgadow.Top.PRW.MC16d.FS.special_signals/: prw.merged.root
source/FourTopsGNNSampleProduction/share/PRW/user.pgadow.Top.PRW.MC16e.FS.special_sherpa2210/: prw.merged.root
source/FourTopsGNNSampleProduction/share/PRW/user.pgadow.Top.PRW.MC16e.FS.special_signals/: prw.merged.root
(+28 files in other folders)
